Remove local player